# src

./: .gitignore  CMakeLists.txt  README.markdown  README.md  build.properties  build.xml  swg.doxygen
engine/client/application/Miff/src/: CMakeLists.txt  lex_yy.c  parser.c  parser.h
engine/client/application/Miff/src/linux/: InputFileHandler.cpp  OutputFileHandler.cpp  OutputFileHandler.h  bison.simple  miff.cpp  parser.lex  parser.yac
engine/client/application/Miff/src/win32/: InputFileHandler.cpp  InputFileHandler.h  OutputFileHandler.cpp  bison.simple  mIFF.dox  miff.cpp  parser.lex  parser.yac
engine/server/application/: CMakeLists.txt
engine/server/application/CentralServer/: CMakeLists.txt
engine/server/application/CentralServer/src/: CMakeLists.txt
engine/server/application/CentralServer/src/linux/: CentralServer.profdata  main.cpp
engine/server/application/CentralServer/src/shared/: AuctionTransferClient.cpp  AuctionTransferClient.h  CentralCSHandler.cpp  CentralCSHandler.h  CentralServer.cpp  CentralServer.h  CentralServerMetricsData.cpp  CentralServerMetricsData.h  CharacterCreationTracker.cpp  CharacterCreationTracker.h  ChatServerConnection.cpp  ChatServerConnection.h  ConfigCentralServer.cpp  ConfigCentralServer.h  ConnectionServerConnection.cpp  ConnectionServerConnection.h  ConsoleCommandParser.cpp  ConsoleCommandParserDatabase.cpp  ConsoleCommandParserDatabase.h  ConsoleCommandParserGame.cpp  ConsoleCommandParserGame.h  ConsoleCommandParserLoginServer.cpp  ConsoleConnection.cpp  ConsoleConnection.h  ConsoleManager.cpp  CustomerServiceConnection.cpp  CustomerServiceConnection.h  FirstCentralServer.h  GameServerConnection.cpp  GameServerConnection.h  LoginServerConnection.cpp  LoginServerConnection.h  PlanetManager.cpp  PlanetManager.h  PlanetServerConnection.cpp  PlanetServerConnection.h  StationPlayersCollectorConnection.cpp  StationPlayersCollectorConnection.h  TaskConnection.cpp  TaskConnection.h  (+4 more)
engine/server/application/CentralServer/src/win32/: FirstCentralServer.cpp  WinMain.cpp
engine/server/application/ChatServer/: CMakeLists.txt
engine/server/application/ChatServer/src/: CMakeLists.txt
engine/server/application/ChatServer/src/linux/: ChatServer.profdata  main.cpp
engine/server/application/ChatServer/src/shared/: CentralServerConnection.cpp  CentralServerConnection.h  ChatInterface.cpp  ChatInterface.h  ChatServer.cpp  ChatServer.h  ChatServerAvatarOwner.cpp  ChatServerAvatarOwner.h  ChatServerMetricsData.cpp  ChatServerMetricsData.h  ChatServerRoomOwner.cpp  ChatServerRoomOwner.h  ConfigChatServer.cpp  ConfigChatServer.h  ConnectionServerConnection.cpp  ConnectionServerConnection.h  CustomerServiceServerConnection.cpp  CustomerServiceServerConnection.h  FirstChatServer.cpp  FirstChatServer.h  GameServerConnection.cpp  GameServerConnection.h  PlanetServerConnection.h  PlanetServerServerConnection.cpp  VChatInterface.cpp  VChatInterface.h
engine/server/application/ChatServer/src/win32/: WinMain.cpp
engine/server/application/CommoditiesServer/: CMakeLists.txt
engine/server/application/CommoditiesServer/src/: CMakeLists.txt
engine/server/application/CommoditiesServer/src/linux/: CommoditiesServer.profdata  main.cpp
engine/server/application/CommoditiesServer/src/shared/: Auction.cpp  Auction.h  AuctionBid.cpp  AuctionBid.h  AuctionItem.cpp  AuctionItem.h  AuctionLocation.cpp  AuctionLocation.h  AuctionMarket.cpp  AuctionMarket.h  CentralServerConnection.cpp  CentralServerConnection.h  CommodityServer.cpp  CommodityServer.h  CommodityServerMetricsData.cpp  CommodityServerMetricsData.h  ConfigCommodityServer.cpp  ConfigCommodityServer.h  DatabaseServerConnection.cpp  DatabaseServerConnection.h  FirstCommodityServer.h  GameServerConnection.cpp  GameServerConnection.h  dBAuctionRecord.h  dBBidRecord.h
engine/server/application/CommoditiesServer/src/win32/: WinMain.cpp
engine/server/application/ConnectionServer/: CMakeLists.txt
engine/server/application/ConnectionServer/src/: CMakeLists.txt
engine/server/application/ConnectionServer/src/linux/: ConnectionServer.profdata  main.cpp
engine/server/application/ConnectionServer/src/shared/: CentralConnection.cpp  CentralConnection.h  ChatServerConnection.cpp  ChatServerConnection.h  Client.cpp  Client.h  ClientConnection.cpp  ClientConnection.h  ConfigConnectionServer.cpp  ConfigConnectionServer.h  ConnectionServer.cpp  ConnectionServer.h  ConnectionServerMetricsData.cpp  ConnectionServerMetricsData.h  CustomerServiceConnection.cpp  CustomerServiceConnection.h  FirstConnectionServer.h  GameConnection.cpp  GameConnection.h  (+4 more)
engine/server/application/CustomerServiceServer/: CMakeLists.txt
engine/server/application/CustomerServiceServer/src/: CMakeLists.txt
engine/server/application/LogServer/: CMakeLists.txt
engine/server/application/LogServer/src/: CMakeLists.txt
engine/server/application/LoginPing/: CMakeLists.txt
engine/server/application/LoginPing/src/: CMakeLists.txt
engine/server/application/LoginServer/: CMakeLists.txt
engine/server/application/LoginServer/src/: CMakeLists.txt
engine/server/application/MetricsServer/: CMakeLists.txt
engine/server/application/MetricsServer/src/: CMakeLists.txt
engine/server/application/PlanetServer/: CMakeLists.txt
engine/server/application/PlanetServer/src/: CMakeLists.txt
engine/server/application/ServerConsole/: CMakeLists.txt
engine/server/application/ServerConsole/src/: CMakeLists.txt
engine/server/application/StationPlayersCollector/: CMakeLists.txt
engine/server/application/StationPlayersCollector/src/: CMakeLists.txt
engine/server/application/TaskManager/: CMakeLists.txt
engine/server/application/TaskManager/src/: CMakeLists.txt
engine/server/application/TransferServer/: CMakeLists.txt
engine/server/application/TransferServer/src/: CMakeLists.txt
engine/shared/application/DataTableTool/src/: CMakeLists.txt
engine/shared/application/TemplateCompiler/src/: CMakeLists.txt
game/server/application/SwgDatabaseServer/src/: CMakeLists.txt
game/server/application/SwgGameServer/src/: CMakeLists.txt
(+1151 files in other folders)
